  @startuml

hide methods
left to right direction
skinparam classAttributeIconSize 0


class Receptionist {
-ID
-Name
-phoneNumber
-email
-address
-citizenCardNumber
-Password
}

class VaccineType{
-description
-code
-vaccineTechnology
}


class VaccineAppointment {
-snsUserNumber
-date
}

class VaccinationCenter {
-id
-name
-phoneNumber
-email
-fax
-website
-openingHour
-closingHour
-slotDuration
-vaccinesPerSlot
-road
-zipCode
-local
centerCoordinatorID
-arrivalsList
}

Receptionist "1" --> "*" VaccineAppointment: schedules >

VaccineAppointment "*" --> "1" VaccineType: has one  >

Company "1" --- "*" VaccineType : storages >

VaccinationCenter "1" --UP- "*" VaccineAppointment : storages >

@enduml